network/kube/lcp/lcp-server.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lcp-server
  template:
    metadata:
      labels:
        app: lcp-server
    spec:
      containers:
        - name: main
          image: localhost:5000/lcp-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: certs-volume
              mountPath: /certs
      volumes:
        - name: config-volume
          configMap:
            name: lcp-server-config
        - name: certs-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lcp-server
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
  selector:
    app: lcp-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  labels:
    app: lcp-server
  name: lcp-server
spec:
  ingressClassName: nginx
  rules:
    - host: lcp.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: lcp-server
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
